libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/access-1.jsonc
//@ run: fail
//@ description: access/1 should error out
["::kernel::special_form::access", "x"]
//~^ ERROR Add missing arguments
